覆盖城市 取消必填

--- a/app/scripts/views/biz/act/update.html
+++ b/app/scripts/views/biz/act/update.html
@@ -68,7 +68,7 @@
                         <!--source="[{text:'德',value:'1'},{text:'智',value:'2'},{text:'体',value:'3'},{text:'美',value:'4'},-->
                         <!--{text:'劳',value:'5'}]" source-api=""></div>-->
 
-                        <div form-checkbox text="覆盖城市" ng-model="param.visible_cities" required="true" default="['上海市']"
+                        <div form-checkbox text="覆盖城市" ng-model="param.visible_cities" default="['上海市']"
                              source="[{text:'上海市',value:'上海市'},{text:'南京市',value:'南京市'},
                              {text:'厦门市',value:'厦门市'},{text:'北京市',value:'北京市'}]" source-api=""></div>
 
