dnd-array directive

--- a/app/scripts/views/biz/live_rooms/update.html
+++ b/app/scripts/views/biz/live_rooms/update.html
@@ -93,7 +93,7 @@
                              source="[{text:'是',value:'1'},{text:'否',value:'2'}]" source-api=""></div>
 
                         <div form-rich-text text="看点" ng-model="param.watch_point" placeholder="看点"></div>
-
+                        <div live-point text="看点" ng-model="param.points"></div>
                     </div>
                 </div>
 
