--- a/app/scripts/views/directive/dnd/dnd-array.html
+++ b/app/scripts/views/directive/dnd/dnd-array.html
@@ -1,4 +1,4 @@
-<div class="dashboard-page ">
+<div class="panel panel-primary">
     <style type="text/css">
         .inlineBlock {
             display: inline-block;
@@ -42,43 +42,38 @@
             width: 1000px;
         }
     </style>
-    <div class="panel panel-primary">
-        <div class="panel-heading">
-            <h3 class="panel-title inlineBlock">视频列表</h3>
-        </div>
-        <div class="panel-body dndsimpleSubject">
-            <div class="col-sm-12 form-group">
-                <table class="table table-bordered table-striped">
-                    <thead>
-                    <tr>
-                        <td class="text-center" colspan="15">
-                            <p>
-                                <a class="btn btn-success btn-rounded btn-sm pull-right"
-                                   ng-click="add()">添加</a>
-                            </p>
-                        </td>
-                    </tr>
-                    <tr>
-                        <th class="text-center" style="width: 100px;">排序</th>
-                    </tr>
-                    </thead>
-                    <tbody dnd-list="ngModel">
-                    <tr ng-repeat="(key,item) in ngModel" dnd-draggable="item"
-                        dnd-moved="videos.splice(key, 1);" dnd-effect-allowed="copyMove">
-                        <td>
-                            <div videos-del data="item"></div>
-                            <a class="btn btn-danger btn-sm btn-bordered"
-                               ng-click="del($index)">删除所选资源</a>
-                        </td>
-                    </tr>
-                    <tr class="dndPlaceholder">
-                        <td class="text-center" colspan="1"><h3 class="red">拖拽到这里</h3></td>
-                    </tr>
-                    </tbody>
-                    <tbody>
-                    </tbody>
-                </table>
-            </div>
+    <div class="panel-heading">
+        <h3 class="panel-title inlineBlock">可拖动顺序</h3>
+    </div>
+    <div class="panel-body dndsimpleSubject">
+        <div class="col-sm-12 form-group">
+            <table class="table table-bordered table-striped">
+                <thead>
+                </thead>
+                <tbody dnd-list="ngModel">
+                <tr ng-repeat="(key,item) in ngModel" dnd-draggable="item"
+                    dnd-moved="ngModel.splice(key, 1);" dnd-effect-allowed="copyMove">
+                    <td>
+                        <div ng-include="getContentUrl()"></div>
+                    </td>
+                    <td class="width100">
+                        <a class="btn btn-danger btn-sm btn-bordered  pull-right"
+                           ng-click="del($index)">删除</a>
+                    </td>
+                </tr>
+                <tr class="dndPlaceholder">
+                    <td class="text-center" colspan="2"><h3 class="red">拖拽到这里</h3></td>
+                </tr>
+                </tbody>
+                <tbody>
+                <tr>
+                    <td class="text-center" colspan="2">
+                        <a class="btn btn-success btn-rounded btn-sm pull-right"
+                           ng-click="add()">添加</a>
+                    </td>
+                </tr>
+                </tbody>
+            </table>
         </div>
     </div>
 </div>
