--- a/app/scripts/views/biz/live_rooms/point.html
+++ b/app/scripts/views/biz/live_rooms/point.html
@@ -1,9 +1,9 @@
 <div>
-    <span ng-bind="($index+1)"></span>
+    <span ng-bind="'排序 : '+item.order_by"></span>
     <div form-input text="看点名" ng-model="item.title" required="true"></div>
     <div form-textarea text="基本信息" ng-model="item.content"></div>
     <div form-image="" text="图片" ng-model="item.pics" hide-bar="[0,0,1,1]" max="8"></div>
     <!--<p>-->
-        <!--<span ng-bind="item|json"></span>-->
+    <!--<span ng-bind="item|json"></span>-->
     <!--</p>-->
 </div>
