--- a/app/scripts/views/live/answers/answers.html
+++ b/app/scripts/views/live/answers/answers.html
@@ -1,7 +1,7 @@
 <div class="dashboard-page ">
     <div class="panel panel-primary">
         <div class="panel-heading">
-            <h3 class="panel-title inlineBlock">视频列表</h3>
+            <h3 class="panel-title inlineBlock">答案管理{{question.question_id?(' ID:'+question.question_id):''}}</h3>
         </div>
         <div class="panel-body dndsimpleSubject">
             <form class="form-horizontal" name="FormBody" novalidate>
@@ -11,101 +11,106 @@
                             <form class="form-horizontal" name="FormBody" novalidate>
                                 <div class="col-sm-12 form-group">
                                     <div class="col-sm-6">
-                                        <div form-radio text="分类" ng-model="searchItem.category" default="1"
-                                             source="[{text:'动画',value:'1'},{text:'儿歌',value:'2'},{text:'学习',value:'3'},
-                                        {text:'探索',value:'4'},{text:'艺术',value:'5'}]"></div>
+                                        <div form-radio text="角色" ng-model="searchItem.role_type" default=""
+                                             source="[{text:'全部',value:''},{text:'老师',value:'1'},{text:'助教',value:'2'}]"></div>
+                                    </div>
+                                    <div class="col-sm-6">
+                                        <div form-radio text="状态" ng-model="searchItem.status" default=""
+                                             source="[{text:'全部',value:''},{text:'待审核',value:'1'},{text:'已公开',value:'2'},{text:'已隐藏',value:'3'}]"></div>
                                     </div>
                                 </div>
                                 <div class="col-sm-12 form-group">
                                     <div class="col-sm-6">
-                                        <div form-input text="关键词" ng-model="searchItem.keyword" label-width="2"
-                                             content-width="8"></div>
+                                        <div form-input text="视频ID" ng-model="searchItem.room_id"></div>
                                     </div>
                                     <div class="col-sm-6">
+                                        <div form-input text="视频组ID" ng-model="searchItem.video_group_id"
+                                             label-width="2" content-width="8"></div>
+                                    </div>
+                                </div>
+                                <div class="col-sm-12 form-group">
+                                    <div class="col-sm-6">
+                                        <div form-input text="用户、手机" ng-model="searchItem.user_keyword"></div>
+                                    </div>
+                                    <div class="col-sm-6">
+                                        <div form-input text="内容" ng-model="searchItem.keyword"></div>
+                                    </div>
+                                </div>
+                                <div class="col-sm-12 form-group">
+                                    <div class="col-sm-6">
+                                        <div form-date-time text="创建-开始" ng-model="searchItem.start_time"
+                                             label-width="2" content-width="8"></div>
+                                    </div>
+                                    <div class="col-sm-6">
+                                        <div form-date-time text="创建-结束" ng-model="searchItem.end_time"
+                                             label-width="2" content-width="8"></div>
+                                    </div>
+                                </div>
+                                <div class="col-sm-12 form-group">
+                                    <div class="col-sm-offset-7 col-sm-5">
                                         <a class="btn btn-success btn-bordered" ng-click="init()">查询</a>
                                     </div>
                                 </div>
                             </form>
-                            <!--<div class="col-sm-12 form-group">-->
-                            <!--<a class="btn btn-primary btn-rounded btn-sm pull-right" ng-click="online()">发布到上线</a>-->
-                            <!--</div>-->
                             <div class="col-sm-12 form-group">
                                 <table class="table table-bordered table-striped">
                                     <thead>
                                     <tr>
-                                        <td class="text-center" colspan="15">
-                                            <p>
-                                                <a class="btn btn-success btn-rounded btn-sm pull-right"
-                                                   ng-click="online()">发布上线准备</a>
-                                            </p>
+                                        <td colspan="15">
+                                            <span ng-bind="'总数:'+totalItems"></span>
                                         </td>
                                     </tr>
                                     <tr>
+                                        <th class="text-center" style="width: 50px;">编号</th>
+                                        <th class="text-center" style="width: 50px;">用户</th>
+                                        <th class="text-center" style="width: 150px;">手机</th>
+                                        <th class="text-center" style="width: 50px;">角色</th>
+                                        <th class="text-center" style="width: 50px;">点赞数</th>
+                                        <th class="text-center" style="width: 150px;">内容</th>
+                                        <th class="text-center" style="width: 120px;">图片</th>
+                                        <th class="text-center" style="width: 150px;">创建时间</th>
+                                        <th class="text-center" style="width: 100px;">状态</th>
                                         <th class="text-center" style="width: 50px;">选择</th>
-                                        <th class="text-center" style="width: 50px;">分类</th>
-                                        <th class="text-center" style="width: 250px;">标题</th>
-                                        <th class="text-center" style="width: 50px;">描述</th>
-                                        <th class="text-center" style="width: 150px;">视频缩略图</th>
-                                        <th class="text-center text-primary" style="width: 150px;"
-                                            ng-click="change_sort(sort.created_time,'created_time')">
-                                            创建时间
-                                            <i class="animate-switch fa"
-                                               ng-class="{'fa-angle-double-up':sort.created_time=='asc',
-                                               'fa-angle-double-down':sort.created_time=='desc'}"></i>
-                                        </th>
-                                        <th class="text-center text-primary" style="width: 80px;"
-                                            ng-click="change_sort(sort.views,'views')">
-                                            观看次数
-                                            <i class="animate-switch fa"
-                                               ng-class="{'fa-angle-double-up':sort.views=='asc',
-                                               'fa-angle-double-down':sort.views=='desc'}"></i>
-                                        </th>
-                                        <th class="text-center text-primary" style="width: 80px;"
-                                            ng-click="change_sort(sort.likes,'likes')">
-                                            喜欢
-                                            <i class="animate-switch fa"
-                                               ng-class="{'fa-angle-double-up':sort.likes=='asc',
-                                               'fa-angle-double-down':sort.likes=='desc'}"></i>
-                                        </th>
-                                        <th class="text-center text-primary" style="width: 80px;"
-                                            ng-click="change_sort(sort.unlikes,'unlikes')">
-                                            不喜欢
-                                            <i class="animate-switch fa"
-                                               ng-class="{'fa-angle-double-up':sort.unlikes=='asc',
-                                               'fa-angle-double-down':sort.unlikes=='desc'}"></i>
-                                        </th>
-                                        <th class="text-center" style="width: 150px;">小编一句话</th>
-                                        <th class="text-center" style="width: 150px;">视频地址</th>
-                                        <th class="text-center" style="width: 150px;">操作</th>
                                     </tr>
                                     </thead>
                                     <tbody>
                                     <tr ng-repeat="(key,item) in data">
+                                        <td class="text-center"><span ng-bind="item.id"></span></td>
+                                        <td class="text-center"><span ng-bind="item.user.name"></span></td>
+                                        <td class="text-center"><span ng-bind="item.user.mobile"></span></td>
+                                        <td class="text-center">
+                                            <span ng-bind="item.role_type|live_role_type"></span>
+                                        </td>
+                                        <td class="text-center"><span ng-bind="item.thumbup_count"></span></td>
+                                        <td class="text-center"><span ng-bind="item.answer"></span></td>
+                                        <td class="text-center">
+                                            <show_image url="item.pics[0].pic_url" width="100"></show_image>
+                                        </td>
+                                        <td class="text-center"><span ng-bind="item.created_at"></span></td>
+                                        <td class="text-center">
+                                            <span ng-bind="item.status|keyVal:'1':'待审核':'2':'已公开':'3':'已隐藏'"
+                                                  ng-class="{'text-default':item.status==1,'text-success':item.status==2,'text-danger':item.status==3}"></span>
+                                        </td>
                                         <td class="text-center">
                                             <label class="checkbox-inline checkbox1">
-                                                <input type="checkbox" ng-model="item.checked" ng-true-value="1"
-                                                       ng-false-value="2" ng-change="add_tmp_resources(item,$index)">
+                                                <input type="checkbox" ng-model="item.checked" ng-true-value="true"
+                                                       ng-false-value="false">
                                                 <span></span>
                                             </label>
                                         </td>
-                                        <td class="text-center"><span ng-bind="item.category"></span></td>
-                                        <td class="text-center"><span ng-bind="item.title"></span></td>
-                                        <td class="text-center">
-                                            <div modal-textarea title="查看" content="item.desc"></div>
-                                        </td>
-                                        <td class="text-center">
-                                            <!--<show_image url="item.image" width="100"></show_image>-->
-                                            <show_video url="item.video_url" image-url="item.pic_url"
-                                                        image-width="100"></show_video>
-                                        </td>
-                                        <td class="text-center"><span ng-bind="item.created_at"></span></td>
-                                        <td class="text-center"><span ng-bind="item.play_number"></span></td>
-                                        <td class="text-center"><span ng-bind="item.like_number"></span></td>
-                                        <td class="text-center"><span ng-bind="item.dislike_number"></span></td>
-                                        <td class="text-center"><span ng-bind="item.remark|null2empty"></span></td>
-                                        <td class="text-center"><span ng-bind="item.video_url|null2empty"></span></td>
-                                        <td class="text-center">
-                                            <div resources-edit data="item"></div>
+                                    </tr>
+                                    <tr>
+                                        <td class="text-center" colspan="15">
+                                            <p class="pull-right">
+                                                <a class="btn btn-primary btn-bordered btn-sm"
+                                                   ng-click="selected('all')">全选</a>&nbsp;&nbsp;
+                                                <a class="btn btn-primary btn-bordered btn-sm"
+                                                   ng-click="selected('reverse')">反选</a>&nbsp;&nbsp;
+                                                <a class="btn btn-danger btn-rounded btn-sm"
+                                                   ng-click="audit(3)">审核不通过</a>&nbsp;&nbsp;
+                                                <a class="btn btn-success btn-rounded btn-sm"
+                                                   ng-click="audit(2)">审核通过</a>&nbsp;&nbsp;
+                                            </p>
                                         </td>
                                     </tr>
                                     </tbody>
