--- a/app/scripts/views/live/questions/questions.html
+++ b/app/scripts/views/live/questions/questions.html
@@ -1,7 +1,7 @@
 <div class="dashboard-page ">
     <div class="panel panel-primary">
         <div class="panel-heading">
-            <h3 class="panel-title inlineBlock">视频列表</h3>
+            <h3 class="panel-title inlineBlock">问题管理</h3>
         </div>
         <div class="panel-body dndsimpleSubject">
             <form class="form-horizontal" name="FormBody" novalidate>
@@ -10,58 +10,65 @@
                         <div class="form-group">
                             <form class="form-horizontal" name="FormBody" novalidate>
                                 <div class="col-sm-12 form-group">
-                                    <div class="col-sm-4">
-                                        <div form-radio text="角色" ng-model="searchItem.role" default=""
+                                    <div class="col-sm-6">
+                                        <div form-radio text="角色" ng-model="searchItem.role_type" default=""
                                              source="[{text:'全部',value:''},{text:'老师',value:'1'},{text:'助教',value:'2'}]"></div>
                                     </div>
-                                    <div class="col-sm-8">
-                                        <div form-radio text="状态" ng-model="searchItem.status" default="" label-width="1"
-                                             source="[{text:'全部',value:''},{text:'未审核',value:'1'},{text:'显示',value:'2'},{text:'隐藏',value:'3'}]"></div>
+                                    <div class="col-sm-6">
+                                        <div form-radio text="状态" ng-model="searchItem.status" default=""
+                                             source="[{text:'全部',value:''},{text:'待审核',value:'1'},{text:'已公开',value:'2'},{text:'已隐藏',value:'3'}]"></div>
                                     </div>
                                 </div>
                                 <div class="col-sm-12 form-group">
-                                    <div class="col-sm-4">
-                                        <div form-input text="关键词" ng-model="searchItem.keyword" label-width="2"
-                                             content-width="8"></div>
+                                    <div class="col-sm-6">
+                                        <div form-input text="视频ID" ng-model="searchItem.room_id"></div>
                                     </div>
-                                    <div class="col-sm-4">
-                                        <div form-input text="视频ID" ng-model="searchItem.video_id" label-width="2"
-                                             content-width="8"></div>
-                                    </div>
-                                    <div class="col-sm-4">
+                                    <div class="col-sm-6">
                                         <div form-input text="视频组ID" ng-model="searchItem.video_group_id"
                                              label-width="2" content-width="8"></div>
                                     </div>
                                 </div>
                                 <div class="col-sm-12 form-group">
-                                    <div class="col-sm-4">
+                                    <div class="col-sm-6">
+                                        <div form-input text="用户、手机" ng-model="searchItem.user_keyword"></div>
+                                    </div>
+                                    <div class="col-sm-6">
+                                        <div form-input text="内容" ng-model="searchItem.keyword"></div>
+                                    </div>
+                                </div>
+                                <div class="col-sm-12 form-group">
+                                    <div class="col-sm-6">
                                         <div form-date-time text="创建-开始" ng-model="searchItem.start_time"
                                              label-width="2" content-width="8"></div>
                                     </div>
-                                    <div class="col-sm-4">
+                                    <div class="col-sm-6">
                                         <div form-date-time text="创建-结束" ng-model="searchItem.end_time"
                                              label-width="2" content-width="8"></div>
                                     </div>
-                                    <div class="col-sm-4">
+                                </div>
+                                <div class="col-sm-12 form-group">
+                                    <div class="col-sm-offset-7 col-sm-5">
                                         <a class="btn btn-success btn-bordered" ng-click="init()">查询</a>
                                     </div>
                                 </div>
                             </form>
-                            <!--<div class="col-sm-12 form-group">-->
-                            <!--<a class="btn btn-primary btn-rounded btn-sm pull-right" ng-click="online()">发布到上线</a>-->
-                            <!--</div>-->
                             <div class="col-sm-12 form-group">
                                 <table class="table table-bordered table-striped">
                                     <thead>
                                     <tr>
+                                        <td colspan="15">
+                                            <span ng-bind="'总数:'+totalItems"></span>
+                                        </td>
+                                    </tr>
+                                    <tr>
                                         <th class="text-center" style="width: 50px;">编号</th>
-                                        <th class="text-center" style="width: 250px;">用户</th>
-                                        <th class="text-center" style="width: 50px;">手机</th>
-                                        <th class="text-center" style="width: 150px;">角色</th>
+                                        <th class="text-center" style="width: 50px;">用户</th>
+                                        <th class="text-center" style="width: 150px;">手机</th>
+                                        <th class="text-center" style="width: 100px;">角色</th>
                                         <th class="text-center" style="width: 150px;">回答</th>
                                         <th class="text-center" style="width: 150px;">内容</th>
-                                        <th class="text-center" style="width: 150px;">时间</th>
-                                        <th class="text-center" style="width: 150px;">操作</th>
+                                        <th class="text-center" style="width: 150px;">图片</th>
+                                        <th class="text-center" style="width: 150px;">创建时间</th>
                                         <th class="text-center" style="width: 150px;">状态</th>
                                         <th class="text-center" style="width: 50px;">选择</th>
                                     </tr>
@@ -74,14 +81,21 @@
                                         <td class="text-center">
                                             <span ng-bind="item.role_type|live_role_type"></span>
                                         </td>
-                                        <td class="text-center"><span ng-bind="item.answers_num"></span></td>
+                                        <td class="text-center">
+                                            <!--<span ng-bind="item.answer_num"></span>-->
+                                            <!--<span show-table-->
+                                            <!--data="{text:\'item.answer_num\',modid:\'answerList\',config:\'config\',columns:\'columns\'}"></span>-->
+                                            <a class="btn btn-primary btn-bordered btn-sm"
+                                               ng-bind="item.answer_num" ng-click="open_answer(item)"></a>
+                                        </td>
                                         <td class="text-center"><span ng-bind="item.content"></span></td>
+                                        <td class="text-center">
+                                            <show_image url="item.pics[0].pic_url" width="100"></show_image>
+                                        </td>
                                         <td class="text-center"><span ng-bind="item.created_at"></span></td>
                                         <td class="text-center">
-                                            <div modal-textarea title="查看" content="item.content"></div>
-                                        </td>
-                                        <td class="text-center">
-                                            <span ng-bind="item.status|keyVal:'1':'待审核':'2':'已公开':'3':'已隐藏'"></span>
+                                            <span ng-bind="item.status|keyVal:'1':'待审核':'2':'已公开':'3':'已隐藏'"
+                                                  ng-class="{'text-default':item.status==1,'text-success':item.status==2,'text-danger':item.status==3}"></span>
                                         </td>
                                         <td class="text-center">
                                             <label class="checkbox-inline checkbox1">
@@ -91,8 +105,6 @@
                                             </label>
                                         </td>
                                     </tr>
-                                    </tbody>
-                                    <tbody>
                                     <tr>
                                         <td class="text-center" colspan="15">
                                             <p class="pull-right">
