--- a/app/scripts/views/live/questions/questions.html
+++ b/app/scripts/views/live/questions/questions.html
@@ -111,6 +111,8 @@
                                                 <a class="btn btn-primary btn-bordered btn-sm"
                                                    ng-click="selected('all')">全选</a>&nbsp;&nbsp;
                                                 <a class="btn btn-primary btn-bordered btn-sm"
+                                                   ng-click="selected('cancel')">全取消</a>&nbsp;&nbsp;
+                                                <a class="btn btn-primary btn-bordered btn-sm"
                                                    ng-click="selected('reverse')">反选</a>&nbsp;&nbsp;
                                                 <a class="btn btn-danger btn-rounded btn-sm"
                                                    ng-click="audit(3)">审核不通过</a>&nbsp;&nbsp;
