--- a/app/scripts/views/directive/dnd/dnd-array.html
+++ b/app/scripts/views/directive/dnd/dnd-array.html
@@ -52,11 +52,11 @@
                 <tbody dnd-list="ngModel">
                 <tr ng-repeat="(key,item) in ngModel" dnd-draggable="item"
                     dnd-moved="ngModel.splice(key, 1);" dnd-effect-allowed="copyMove">
-                    <td>
+                    <td dnd-nodrag>
                         <div class="row">
                             <div class="col-sm-11" ng-include="getContentUrl()"></div>
-                            <div class="col-sm-1">
-                                <a class="btn btn-danger btn-sm btn-bordered pull-right"
+                            <div class="col-sm-1" dnd-handle>
+                                <a class="btn btn-danger btn-xs btn-bordered pull-right"
                                    ng-click="del($index)" ng-show="config.del!=false">删除</a>
                             </div>
                         </div>
@@ -69,11 +69,9 @@
                 <tr class="dndPlaceholder">
                     <td class="text-center" colspan="1"><h3 class="red">拖拽到这里</h3></td>
                 </tr>
-                </tbody>
-                <tbody>
                 <tr ng-show="config.add!=false">
                     <td class="text-center" colspan="1">
-                        <a class="btn btn-success btn-rounded btn-sm pull-right"
+                        <a class="btn btn-success btn-rounded btn-xs pull-right"
                            ng-click="add()">添加</a>
                     </td>
                 </tr>
